# Cards

./: .env.example  .eslintrc.cjs  .gitignore  ADVANCED_FEATURES.md  ADVANCED_LOGGING_GUIDE.md  CHANGELOG.md  CRITICAL_TESTS_SUMMARY.md  DEBUGGING_GUIDE.md  DEV_GUIDE.md  EPIC_BREAKTHROUGH.md  FINAL_DIAGNOSIS.md  IMPLEMENTATION_COMPLETE.md  INFRASTRUCTURE_OPTIMIZATION_REPORT.md  INSTALLATION.md  OPTIMIZATION_SYSTEMS.md  PERFORMANCE_GUIDE.md  README.md  SESSION_FINAL_PUSH.md  SESSION_REPORT.md  STATUS_FINAL.md  TESTING_GUIDE.md  USER_GUIDE.md  bench-history.json  index.html  package-lock.json  package.json  perf-history.json  perf-smoke.json  playwright.config.ts  start-tauri.bat  tailwind.config.js  tsconfig.json  vite.config.minimal.ts  vite.config.ts  vitest.config.ts
.githooks/: post-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bench/: recordReview.bench.ts  studyQueue.bench.ts
docs/: MAINTENANCE_GUIDE.md  README.md
docs/archived/: ANALYSIS_REPORT.md  CIRCADIAN_UI_REPORT.md  CLEANUP_SUMMARY.md  (+18 more)
e2e/: critical-flow.spec.ts
memory-bank/: architect.md  progress.md  systemPatterns.md
public/: manifest.json  offline.html  react-test.html  test.html
scripts/: benchRecord.cjs  generateCoverageBadge.cjs  generatePwaIcons.cjs  learnCheck.cjs  learningAppend.cjs  lighthouse.cjs  perfCheck.cjs  perfReport.cjs  perfSmoke.cjs
src/: App.diagnostic.tsx  App.minimal.tsx  App.pure.js  App.simple.tsx  App.tsx  index.css  main.jsx  main.simple.jsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+370 files in other folders)
